--- a/Startsida.html
+++ b/Startsida.html
@@ -4,13 +4,13 @@
         <title>GolfGear</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text.css" href="GolfGear.css">
+        <link rel="stylesheet" type="text/css" href="Startsida.css" />
         <script src="Main.js"></script>
     </head>
 
     <body>
-            <header><h1>GolfGear</h1> </header>
-            <p>GolfGear är en hemsida för golfspelare som tycker utrustningen är det viktigaste</p>
+           <h1> GolfGear </h1>
+            <p class="intro">GolfGear är en hemsida för golfspelare som tycker utrustningen är det viktigaste</p>
         
         <form name="Inlogg" method="POST" action="länk til php">
             <h3>Logga in</h3>
