--- a/Startsida.html
+++ b/Startsida.html
@@ -12,7 +12,7 @@
            <h1> GolfGear </h1>
             <p class="intro">GolfGear är en hemsida för golfspelare som tycker utrustningen är det viktigaste</p>
         
-        <form name="Inlogg" method="POST" action="länk til php">
+        <form class="loggain" method="POST" action="länk til php">
             <h3>Logga in</h3>
             Eller <a href="Regga.html">skapa ett konto</a></br>
             </br>
