--- a/Startsida.html
+++ b/Startsida.html
@@ -10,10 +10,12 @@
 
     <body>
            <h1> GolfGear </h1>
-            <p class="intro">GolfGear är en hemsida för golfspelare som tycker utrustningen är det viktigaste</p>
-        
+            <p class="intro">GolfGear är en hemsida för golfspelare
+               som tycker utrustningen är det viktigaste</p>
+
         <form class="loggain" method="POST" action="länk til php">
             <h3>Logga in</h3>
+            /*<!-- TODO: Lägg till requered på alla inputs -->
             Eller <a href="Regga.html">skapa ett konto</a></br>
             </br>
             <label for="username">Användarnamn</label></br>
@@ -26,5 +28,5 @@
         </form>
     </body>
 
-    
+
 </html>
