--- a/Startsida.html
+++ b/Startsida.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>GolfGear</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="Startsida.css" />
-        <script src="Main.js"></script>
-    </head>
 
-    <body>
-           <h1> GolfGear </h1>
-            <p class="intro">GolfGear är en hemsida för golfspelare
-               som tycker utrustningen är det viktigaste</p>
+<head>
+  <title>GolfGear</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="Startsida.css" />
+  <script src="Main.js"></script>
+</head>
 
-        <form class="loggain" method="POST" action="länk til php">
-            <h3>Logga in</h3>
-            /*<!-- TODO: Lägg till requered på alla inputs -->
-            Eller <a href="Regga.html">skapa ett konto</a></br>
-            </br>
-            <label for="username">Användarnamn</label></br>
-            <input type="text" id="username"></br>
+<body>
+  <h1> GolfGear </h1>
+  <p class="intro">GolfGear är en hemsida för golfspelare
+    som tycker utrustningen är det viktigaste</p>
 
-            <label for="password">Lösenord</label></br>
-            <input type="password" id="password"></br>
+  <form class="loggain" method="POST" action="länk til php">
+    <h3>Logga in</h3>
+    Eller <a href="Regga.html">skapa ett konto</a></br>
+    </br>
+    <label for="username">Användarnamn</label></br>
+    <input type="text" id="username" required></br>
 
-            <input type="submit" value="Logga in" onclick="ValideraInlogg()">
-        </form>
-    </body>
+    <label for="password">Lösenord</label></br>
+    <input type="password" id="password" required></br>
+
+    <input type="submit" value="Logga in" onclick="ValideraInlogg()">
+  </form>
+</body>
 
 
 </html>
