--- a/Regga.html
+++ b/Regga.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>GolfGear</title>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> <!-- TODO: utf8_general_ci eventuellt -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="Regga.css" />
   <script src="Main.js"></script>
