--- a/Startsida.html
+++ b/Startsida.html
@@ -14,7 +14,7 @@
   <p class="intro">GolfGear är en hemsida för golfspelare
     som tycker utrustningen är det viktigaste</p>
 
-  <form class="loggain" method="POST" action="länk til php">
+  <form class="loggain" method="POST" action="loggain.php">
     <h3>Logga in</h3>
     Eller <a href="Regga.html">skapa ett konto</a></br>
     </br>
