--- a/Regga.html
+++ b/Regga.html
@@ -11,8 +11,8 @@
 
 <body>
   <h1>GolfGear</h1>
-  <h3>Fyll i nedan för att skapa konto</h3>
-  <form name="Registrera" method="POST" action="Registrera.php">
+  <h3>Fyll i nedan för att skapa konto</h3>  <!-- TODO: Fixa rätt adress på action -->
+  <form name="Registrera" method="POST"  action=>
 
     <label for="email">Email</label></br>
     <input type="email" id="email" name="Email" required></br>
