--- a/Startsida.html
+++ b/Startsida.html
@@ -24,7 +24,7 @@
     <label for="password">Lösenord</label></br>
     <input type="password" id="password" required></br>
 
-    <input type="submit" value="Logga in" onclick="ValideraInlogg()">
+    <input type="submit" value="Logga in" >  <!-- onclick="ValideraInlogg()" -->
   </form>
 </body>
 
